Restrict the size of the table images

--- a/mezzanine/core/templates/admin/base_site.html
+++ b/mezzanine/core/templates/admin/base_site.html
@@ -75,7 +75,7 @@ jQuery(function($) {
     #changelist table { width: 100%; }
     #changelist table img { width: 100%; }
     textarea[readonly] { background: #ddd; color: #eee; }
-
+    table img { max-width: 30px; }
 </style>
 {% endblock %}
 
