Style fix for chosen

--- a/mezzanine/core/static/mezzanine/chosen/chosen.css
+++ b/mezzanine/core/static/mezzanine/chosen/chosen.css
@@ -3,8 +3,10 @@
   font-size: 13px;
   position: relative;
   display: inline-block;
-  zoom: 1;
   *display: inline;
+  zoom: 1;
+  max-width: 280px;
+  width: 100%;
 }
 .chzn-container .chzn-drop {
   background: #fff;
